Implementação de rotina de teste de UI.